--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
             <img src="img/wedding/02.png" title="TITLE 2" />
             <img src="img/wedding/03.png" title="TITLE 3" />
             <img src="img/wedding/04.png" title="TITLE 4" />
-            <img id="addGalleyItem" class="hidden"src="img/wedding/05.png" title="TITLE 5" />
-            <img id="addGalleyItem" class="hidden"src="img/wedding/06.png" title="TITLE 6" />
+            <img src="img/wedding/05.png" title="TITLE 5" />
+            <img src="img/wedding/06.png" title="TITLE 6" />
             <img id="addGalleyItem" class="hidden" src="img/wedding/07.png" title="TITLE 7" />
             <img id="addGalleyItem" class="hidden" src="img/wedding/08.png" title="TITLE 8" />
             <img id="addGalleyItem" class="hidden" src="img/wedding/09.png" title="TITLE 9" />
@@ -578,7 +578,7 @@
                 this.classList.toggle("active");
                 var accountPanel = this.nextElementSibling;
                 if (this.classList.contains("active")) {
-                  accountPanel.style.height = "520px";
+                  accountPanel.style.height = "530px";
                   accountPanel.style.padding = "5%";
                 } else {
                   accountPanel.style.height = "0";
