--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
           mapLinkEl.addEventListener("click", () => { 
             const userAgent = navigator.userAgent.toLowerCase();
     
-            if (userAgent.indexOf('iphone') > -1) {
+            if (userAgent.indexOf('iphone') > -1 || userAgent.indexOf('android') > -1) {
               window.location.href = "kakaomap://place?id=7882860"
             } else {
               window.location.href = "https://kko.kakao.com/fc6oH3wVkh";
